--- a/.gitconfig
+++ b/.gitconfig
@@ -15,6 +15,7 @@
   squash = commit --squash
   unstage = reset HEAD
   rum = rebase master@{u}
+  fpl = !git fetch --prune && git lola
 
 [core]
   editor = vim
